* Ability to create an iterator with present()

* Remove Engines dependency