@@ -2,7 +2,7 @@ Dependencies.load_paths << Rails.root + '/app/presenters'
 
 config.after_initialize do
   Rails.plugins.each do |plugin|
-    path = Rails.root + "/vendor/plugins/#{plugin.name}/app/presenters"
+    path = plugin.directory + "/app/presenters"
   
     if File.directory?(path)
       Dependencies.load_paths << path
