@@ -1,3 +1,5 @@
+* You can have presenters in plugins elsewhere than vendor/plugins
+
 * Ability to create an iterator with present()
 
 * Remove Engines dependency
